--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'java'
 }
 
-group 'org.example'
+group 'com.tfc'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -12,8 +12,8 @@ repositories {
 }
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.3.11'
+    compileOnly 'org.codehaus.groovy:groovy-all:2.3.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
-    compileClasspath "com.github.GiantLuigi4:FlameLoader:f0250ebbd7"
+    compileOnly "com.github.GiantLuigi4:FlameLoader:f0250ebbd7"
 }
